objects/Recommendation.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <label>Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Targeted_Audience__c</fullName>
        <inlineHelpText>Who should this recommendation target?</inlineHelpText>
        <label>Targeted Audience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Recommendation_Audience</valueSetName>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Recommendations</fullName>
        <columns>Name</columns>
        <columns>Description</columns>
        <columns>ActionReference</columns>
        <columns>Category__c</columns>
        <columns>Ranking__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Recommendations</label>
    </listViews>
    <listViews>
        <fullName>INTERNAL_Recommendations</fullName>
        <columns>Name</columns>
        <columns>Description</columns>
        <filterScope>Everything</filterScope>
        <label>INTERNAL Recommendations</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CEO</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PRM_Recommendations</fullName>
        <columns>Name</columns>
        <columns>Description</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Name</field>
            <operation>contains</operation>
            <value>PRM</value>
        </filters>
        <label>PRM Recommendations</label>
    </listViews>
    <recordTypes>
        <fullName>Recommendation</fullName>
        <active>true</active>
        <description>Default record type for recommendations.</description>
        <label>Recommendation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>